[package]
name = "slowrsa"
version = "0.1.0"
authors = ["Liu Xiaoyi <circuitcoder0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.2.2"
ramp = "0.5.1"
rand = "0.6.5"
structopt = { git = "https://github.com/TeXitoi/structopt", features = ["paw"] }
paw = "1.0.0"
